--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
     <title>Project 0</title>
   </head>
   <body>
-    <!-- navigation -->
+    <!--navigation  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="#">Project 0</a>
@@ -32,8 +32,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">Education</a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
+            <a class="nav-item nav-link active" href="education.html"
+              >Education</a
+            >
             <a class="nav-item nav-link" href="#">Skills</a>
             <a class="nav-item nav-link" href="#">Interests</a>
           </div>
