completed education page
also modifie the navbar

--- a/education.html
+++ b/education.html
@@ -18,7 +18,7 @@
     <!--navigation  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Project 0</a>
+        <a class="navbar-brand" href="index.html">Project 0</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,6 +42,51 @@
         </div>
       </div>
     </nav>
+    <!-- introduction -->
+    <section id="intro">
+      <div class="container">
+        <h1>Education</h1>
+        <p class="lead">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias
+          doloremque libero nulla minus mollitia, nam consectetur illo ea quasi
+          maxime.
+        </p>
+      </div>
+    </section>
+
+    <!-- list of edX courses -->
+    <section id="courses">
+      <div class="container">
+        <h3>Formal Education</h3>
+        <ul>
+          <li>High School Graduate.</li>
+          <li>Bachelor of Science in Mathematics.</li>
+          <li>Graduate course work.</li>
+        </ul>
+
+        <h3>Informal Education</h3>
+        <p>I've taken several online courses through EdX. Here's a list:</p>
+        <ul>
+          <li>CS50's Web Programming with Python and JavaScript</li>
+          <li>Power and Responsivility: Doing Philosophy with Superheroes</li>
+          <li>Project Management Life Cycle</li>
+          <li>
+            AP&reg; Calculus: Challenging Concepts from Calculus AB & Calculus
+            BC
+          </li>
+          <li>Star Trek: Inspiring Culture and Technology</li>
+          <li>Introduction to Computational Thinking and Data Science</li>
+          <li>Introduction to Computer Science and Programming Using Python</li>
+          <li>
+            Introduction to Java Programming: Fundamental Data Structures and
+            Algorithms
+          </li>
+          <li>Introduction to Java Programming: Writing Good Code</li>
+          <li>Introduction to Java Programming: Starting to Code in Java</li>
+          <li>The Rise of Superheroes and Their Impact On Pop Culture</li>
+        </ul>
+      </div>
+    </section>
 
     <!-- bootstrap scripts -->
     <script
