--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
     <!-- navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Project 0</a>
+        <a class="navbar-brand" href="index.html">Project 0</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -32,10 +32,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">Education</a>
-            <a class="nav-item nav-link" href="#">Skills</a>
-            <a class="nav-item nav-link" href="#">Interests</a>
+            <a class="nav-item nav-link active" href="index.html">Home</a>
+            <a class="nav-item nav-link" href="education.html">Education</a>
+            <a class="nav-item nav-link" href="skills.html">Skills</a>
+            <a class="nav-item nav-link" href="interests.html">Interests</a>
           </div>
         </div>
       </div>
