--- a/education.html
+++ b/education.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!--navigation  -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
       <div class="container">
         <a class="navbar-brand" href="index.html">Project 0</a>
         <button
@@ -31,7 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link active" href="education.html"
               >Education</a
