--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <title>Project 0</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-dark bg-danger">
       <div class="container">
-        <a class="navbar-brand" href="#">Project 0</a>
+        <a class="navbar-brand" href="index.html">Project 0</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,7 +39,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link active" href="index.html">Home</a>
             <a class="nav-item nav-link" href="education.html">Education</a>
             <a class="nav-item nav-link" href="skills.html">Skills</a>
