finished skills page
modified menu on education page

--- a/education.html
+++ b/education.html
@@ -36,8 +36,8 @@
             <a class="nav-item nav-link active" href="education.html"
               >Education</a
             >
-            <a class="nav-item nav-link" href="#">Skills</a>
-            <a class="nav-item nav-link" href="#">Interests</a>
+            <a class="nav-item nav-link" href="skills.html">Skills</a>
+            <a class="nav-item nav-link" href="interests.html">Interests</a>
           </div>
         </div>
       </div>
