--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,30 @@
     </section>
     <!-- skills table -->
     <secion id="skill_table">
-      <div class="container"></div>
+      <div class="container">
+        
+        <table>
+         <th>
+           <td>Technical Skills</td>
+         </th>
+          <tr>
+            <td>html5</td>
+            <td>css3</td>
+            <td>Java</td>
+          </tr>
+          <tr>
+            <td>Python</td>
+            <td>VSCode</td>
+            <td>Office365</td>
+          </tr>
+          <tr>
+            <td>Google Docs</td>
+            <td>Google Sheets</td>
+            <td>Google Slides</td>
+          </tr>
+        </table>
+        
+      </div>
     </secion>
 
     <!-- bootstrap scripts -->
