--- a/index.html
+++ b/index.html
@@ -103,24 +103,24 @@
       <div class="container">
         <div class="row">
           <div class="col-md-2 col-sm-4">
-            <i class="fab fa-github"></i><br />
+            <i class="fab fa-github fa-4x"></i><br />
             github
           </div>
           <div class="col-md-2 col-sm-4">
-            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-facebook-f fa-4x"></i>
             facebook
           </div>
           <div class="col-md-2 col-sm-4">
-            <i class="fab fa-twitter"></i>twitter
+            <i class="fab fa-twitter fa-4x"></i>twitter
           </div>
           <div class="col-md-2 col-sm-4">
-            <i class="fab fa-instagram"></i>instagram
+            <i class="fab fa-instagram fa-4x"></i>instagram
           </div>
           <div class="col-md-2 col-sm-4">
-            <i class="fab fa-linkedin-in"></i>linkedin
+            <i class="fab fa-linkedin-in fa-4x"></i>linkedin
           </div>
           <div class="col-md-2 col-sm-4">
-            <i class="far fa-envelope"></i>email
+            <i class="far fa-envelope fa-4x"></i>email
           </div>
         </div>
       </div>
