styled education page
added background photos
updated sass

--- a/education.html
+++ b/education.html
@@ -43,7 +43,7 @@
       </div>
     </nav>
     <!-- introduction -->
-    <section id="intro">
+    <section id="intro" class="ed-intro">
       <div class="container">
         <h1>Education</h1>
         <p class="lead">
