--- a/skills.html
+++ b/skills.html
@@ -41,7 +41,7 @@
       </div>
     </nav>
     <!-- intro -->
-    <section id="intro">
+    <section id="intro" class="skills-intro">
       <div class="container">
         <h1>Skills</h1>
         <p class="lead">
