styled skills page
updated scss and css
table is located here

--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,13 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"
+      integrity="sha256-PF6MatZtiJ8/c9O9HQ8uSUXr++R9KBYu4gbNG5511WE="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Project 0</title>
   </head>
@@ -53,27 +60,24 @@
       </div>
     </section>
     <!-- skills table -->
-    <secion id="skill_table">
+    <section id="skills">
       <div class="container">
-        
-        <table>
-         <th>
-           <td>Technical Skills</td>
-         </th>
+        <h3 class="text-danger">Technical Skills</h3>
+        <table id="skill_table">
           <tr>
-            <td>html5</td>
-            <td>css3</td>
-            <td>Java</td>
+            <td><i class="fab fa-html5 fa-5x"></i></td>
+            <td><i class="fab fa-css3 fa-5x"></i></td>
+            <td><i class="fab fa-java fa-5x"></i></td>
           </tr>
           <tr>
-            <td>Python</td>
-            <td>VSCode</td>
-            <td>Office365</td>
+            <td><i class="fab fa-python fa-5x"></i></td>
+            <td><img src="img/vscode-logo-stable.png" alt="VSCode"> </td>
+            <td><img src="img/Ofc365_rgb_Orng166.png" alt="Office365"></td>
           </tr>
           <tr>
-            <td>Google Docs</td>
-            <td>Google Sheets</td>
-            <td>Google Slides</td>
+            <td><i class="fab fa-google fa-5x"></i><h3 class="text-primary">Docs</h3></td>
+            <td><i class="fab fa-google fa-5x"></i><h3 class="text-success">Sheets</h3></td>
+            <td><i class="fab fa-google fa-5x"></i><h3 class="text-warning">Slides</h3></td>
           </tr>
         </table>
         
