--- a/interests.html
+++ b/interests.html
@@ -44,7 +44,7 @@
     </nav>
 
     <!-- intro section -->
-    <section id="intro">
+    <section id="intro" class="interests-intro">
       <div class="container">
         <h1>Interests</h1>
         <p class="lead">
@@ -54,6 +54,42 @@
           dignissimos eius doloremque, voluptatibus qui? Vitae minima quia totam
           dolorum labore? Impedit.
         </p>
+      </div>
+    </section>
+
+    <!-- interests section -->
+    <section id="interests mt-3">
+      <div class="container">
+        <div class="row py-3">
+          <div class="col">
+            <h3 class="text-danger">Things I Like</h3>
+          </div>
+        </div>
+
+        <div class="row pb-2">
+          <div class="col-md-4">
+            <img src="img/musicmagazines.jpg" class="img-thumbnail" alt="">
+          </div>
+          <div class="col-md-8">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus iusto fugiat aspernatur dolorem nulla mollitia quia saepe perferendis eos nihil dignissimos nemo nam quaerat magnam repellendus quibusdam perspiciatis quidem, vero laudantium, dolorum aliquid? Dolore laudantium reprehenderit nam, autem et voluptatem, officia corporis qui iusto adipisci blanditiis dolores animi deleniti possimus quidem nemo inventore minus reiciendis architecto! Nobis, et sapiente aspernatur placeat animi, maxime cupiditate harum suscipit laborum libero sunt consectetur cumque error rerum laudantium quisquam minima facere eum. Nostrum ex dolores aliquid, molestias est sit sequi, recusandae excepturi corporis necessitatibus laboriosam aut, eius officiis ad. Odio numquam excepturi illo voluptatem!
+          </div>
+        </div>
+        <div class="row pb-2">
+          <div class="col-md-4">
+            <img src="img/batman.jpg" alt="" class="img-fluid">
+          </div>
+          <div class="col-md-8">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus iusto fugiat aspernatur dolorem nulla mollitia quia saepe perferendis eos nihil dignissimos nemo nam quaerat magnam repellendus quibusdam perspiciatis quidem, vero laudantium, dolorum aliquid? Dolore laudantium reprehenderit nam, autem et voluptatem, officia corporis qui iusto adipisci blanditiis dolores animi deleniti possimus quidem nemo inventore minus reiciendis architecto! Nobis, et sapiente aspernatur placeat animi, maxime cupiditate harum suscipit laborum libero sunt consectetur cumque error rerum laudantium quisquam minima facere eum. Nostrum ex dolores aliquid, molestias est sit sequi, recusandae excepturi corporis necessitatibus laboriosam aut, eius officiis ad. Odio numquam excepturi illo voluptatem!
+          </div>
+        </div>
+        <div class="row pb-2">
+          <div class="col-md-4">
+            <img src="img/enterprise.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-md-8">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus iusto fugiat aspernatur dolorem nulla mollitia quia saepe perferendis eos nihil dignissimos nemo nam quaerat magnam repellendus quibusdam perspiciatis quidem, vero laudantium, dolorum aliquid? Dolore laudantium reprehenderit nam, autem et voluptatem, officia corporis qui iusto adipisci blanditiis dolores animi deleniti possimus quidem nemo inventore minus reiciendis architecto! Nobis, et sapiente aspernatur placeat animi, maxime cupiditate harum suscipit laborum libero sunt consectetur cumque error rerum laudantium quisquam minima facere eum. Nostrum ex dolores aliquid, molestias est sit sequi, recusandae excepturi corporis necessitatibus laboriosam aut, eius officiis ad. Odio numquam excepturi illo voluptatem!
+          </div>
+        </div>
       </div>
     </section>
 
